<package>
  <name>roadmap_global_planner</name>
  <version>0.0.0</version>
  <description>
     A path planner library and node.
  </description>
  <author>Veera Ragav</author>
  <maintainer email="veeraragav@katomaran.com">Veera Ragav</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <license>BSD</license>
  <build_depend>angles</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <export>
      <nav_core plugin="${prefix}/roadmap_global_planner_plugin.xml"/>
  </export>

<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>
<run_depend>angles</run_depend>

<build_depend>roadmap_global_planner_msgs</build_depend>
<run_depend>roadmap_global_planner_msgs</run_depend>
<run_depend>message_generation</run_depend>
</package>